config-kubernetes/deploy/secured-layered-myapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-guard
  namespace: default
  labels:
    app: myapp-guard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-guard
  template:
    metadata:
      labels:
        app: myapp-guard
    spec:
      volumes:
      - name: certificate-volume
        secret:
          secretName: default-serving-certs
          optional: true
      - name: guard-token-volume
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              audience: guard-service
              expirationSeconds: 3600
              path: guard-service
      serviceAccountName: guardian-reader
      containers:
      - name: guard-rproxy
        image: ko://knative.dev/security-guard/cmd/guard-rproxy
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 22000
        volumeMounts:
        - mountPath: /var/run/secrets/tokens
          name: guard-token-volume
          readOnly:  true
        - mountPath: /var/lib/knative/certs
          name: certificate-volume
          readOnly:  true
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-guard
spec:
  selector:
    app: myapp-guard
  ports:
    - protocol: TCP
      port: 22000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: default
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        image: gcr.io/knative-samples/helloworld-go
        imagePullPolicy: IfNotPresent
        name: myapp
        ports:
        - containerPort: 8080
          name: user-port
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secured-layered-myapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/myapp(/|$)(.*)"
        backend:
          service:
            name: myapp-guard
            port:
              number: 22000
